re-dimencion logo del nav y inplementacion de position: fixed para nav siempre visible haciendo scroll

--- a/css/estilo-principal.css
+++ b/css/estilo-principal.css
@@ -24,6 +24,9 @@ header {
     background-color: var(--crema);
     padding: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    position: fixed;
+    z-index: 1000;
+    width: 100%;
 }
 
 .container {
@@ -56,8 +59,8 @@ col a:hover {
 .logo-ecocashback {
     border-radius: 20px;
     background-color: white;
-    width: 100px;
-    height: 100px;
+    width: 75px;
+    height: 75px;
 }
 
 .col a{
